@@ -48,8 +48,69 @@ db.find()
     ```bash
     docker-compose up -d mongodb auth-service
     ```
-4. Install dependencies and run the project:
+   
+4. For the eID authentication, you need to install the PKCS11 dependencies for maven (which are not on a public repository)
 
+WARNING: first, you need to install OpenSC
+
+On Linux
+
+```bash
+sudo apt update
+sudo apt install opensc
+```
+
+On MacOS
+
+```bash
+brew install opensc
+```
+
+On Windows
+
+
+1. Download the latest OpenSC installer from the [OpenSC releases page](https://github.com/OpenSC/OpenSC/releases)
+2. Look for a file named like `OpenSC-<version>-win64.msi`
+3. Run the installer and follow the installation steps
+   Of course! Here's the improved README in English:
+
+---
+
+
+## Configuring VM Options for IntelliJ IDEA
+
+When running or debugging the application in IntelliJ IDEA, you need to add the following VM options in the configuration settings:
+
+1. Open IntelliJ IDEA and go to the Run/Debug configurations.
+2. Select the configuration for your project.
+3. In the **Configuration** tab, locate the **VM Options** field.
+4. Add the following options:
+```
+--add-exports=jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED --enable-native-access=ALL-UNNAMED
+```
+5. Save the changes and restart your application.
+
+These settings enable the application to properly access native APIs and required cryptographic modules. Make sure to include them to avoid compatibility issues.
+
+### Installing Dependencies
+
+Before running the following commands, make sure to specify **the absolute path** of the file in the `-Dfile` option. Additionally, the version must be enclosed in single quotes (`'`).
+
+```bash
+cd auth-backend
+
+mvn install:install-file -Dfile="/absolute/path/to/pkcs11-provider-1.9.4.jar" -DgroupId=iaik -DartifactId=pkcs11-provider -Dversion='1.9.4' -Dpackaging=jar
+
+mvn install:install-file -Dfile="/absolute/path/to/sunpkcs11-wrapper-1.4.0.jar" -DgroupId=iaik -DartifactId=pkcs11-provider -Dversion='1.9.4' -Dpackaging=jar
+
+mvn install:install-file -Dfile="/absolute/path/to/iaikPkcs11Provider.jar" -DgroupId=iaik -DartifactId=pkcs11-provider -Dversion='1.9.4' -Dpackaging=jar
+```
+
+---
+
+This version ensures clarity regarding the absolute path requirement for `-Dfile` and correctly applies the `'1.9.4'` notation for `-Dversion`. Let me know if you need further refinements! 🚀
+
+5. Install dependencies and run the project:
     ```bash
     mvn clean install
     mvn spring-boot:run
